--- a/aula 3/index.html
+++ b/aula 3/index.html
@@ -4,13 +4,12 @@
 
 <head>
     <title>AULA 3</title>
-    <meta charset="UTF-8"
-    <link href="estilo.css" rel="stylesheet"
-    
-    
+    <meta charset="UTF-8">
+    <link href="estilo.css">
 
 
 </head>
+   
 
 
 <body>
