--- a/aula 3/index.html
+++ b/aula 3/index.html
@@ -17,10 +17,9 @@
 
     <h2>Exemplo de bordas:</h2>
 
-    <div>borda dotted</div>
-    <div>borda dashed</div>
-    <div>borda solid</div>
-
+    <div class="dotted">dotted</div>
+        <div class="dashed">dashed</div>
+        <div class="solid">solid</div>
 
 
 
