Exemplos inicias da aula de html

--- a/aula_1/index.html
+++ b/aula_1/index.html
@@ -1,22 +1,64 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Aula 1</title>
-    <meta charset="UTF-8"
-</head>
+<title> Aula 1</title>
+<meta charset="UTF-8">
 
-<body> 
-    <!--Exemplo de comentario-->
-    
 
-<h4>Capitulo 2</h4>
-<h4>Capitulo 3</h4>
+    </head>
 
-    <p>Exemplo de texto</p>
-    <p>Outro exemplo de texto</p>
+
+<body>
+    <!--Exemplo de comentario
+    <P> EXEMPLO DE TEXTO</P>
+    <P> OUTRO EXEMPLO DE TEXTO</P>
+
+    <h1> Harry potter:</h1>
+    <h2> a acamara secreta</h2>
+    <h2> prisioneiro de azkabam</h2>
+<h2> reliquias da morte</h3>
+    <h3> Parte 1</h3>
+    <h4> Capitulo 1 </h4>
+    <h4> Capitulo 2</h4>
+
+    <h3> Parte 2</h3>
+    <h4> Capitulo 1 </h4>
+    <h4> Capitulo 2</h4> -->
+<P> OUTRO EXEMPLO DE TEXTO</P>
+
+<H2> Exemplo de listas</H2>
+
+<h3>listas ordenadas</h3>
+
+<p>cores:</p>
+<ol start="10">
+    <li>Azul</li>
+<li>Vermelho</li>
+<li> Preto</li>
+<li> Branco</li>
+
+</ol>
+
+
+
+
+<h3> listas nao ordenadas</h3>
+<p>Numeros</p>
+<ul>
+    <li>5 </li>
+    <li>sete</li>
+    <li> XI</li>
+</ul>
+
 
 
 </body>
+
+
+
+
+
+
 
 
 </html>
