adicionei dois links

--- a/aula_1/index.html
+++ b/aula_1/index.html
@@ -52,13 +52,20 @@
 
 <h2>Exemplo de imagens</h2>
 <img src="html.webp" alt="imagem de html" height="500">
+
+<h2>Exemplo de links</h2>
+<a href="http:/portal.fei.edu.br"> Portal FEI </a> 
+<br>
+<a href="contato.html"> CONTATO</a>
+
+
+
+
+
+
+
+
+
+
 </body>
-
-
-
-
-
-
-
-
 </html>
