--- a/aula_1/index.html
+++ b/aula_1/index.html
@@ -64,7 +64,18 @@
 <iframe width="600" height="450" src="https://www.youtube.com/embed/Fhy-5CtVkiM?si=_ApG5rs-eSFSvoSF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
+<h2>Exemplo de tabelas </h2>
+<table border="2">
+    <tr>
+        <td>Pai</td>
+        <td> Mae</td>
+    </tr>
+<tr>
+    <td> Filho</td>
+    <td> Filha</td>
+</tr>
 
+</table>
 
 
 
