--- a/lab_1/index.html
+++ b/lab_1/index.html
@@ -1,6 +1,44 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <title> Lab 1</title>
+    </head>
 
+    <body>
+<h1> João Pedro Castro Gomes</h1>
 
-<body><h1>oi/h1></body>
-</html>
+     <p>Meu nome é Joao Pedro Catro Gomes<P></P> 
+    tenho 18 anos,nasci em Brasília DF, e atualmente estou cursando Ciência da Computação na FEI, em São Bernardo do Campo,SP e esse sou eu e formas de contato:</p>   
+    <a href="contato.html">Contatos</a>
+    <br>
+    <IMG src="WhatsApp Image 2025-02-27 at 18.18.27 (1).jpeg" alt="Foto minha" height="350" width="300">
+<img src="html.webp" height="200" width="150">
+
+    <p>Existem varias coisas que eu gosto de fazer no meu dia a dia, e essas sao algumas delas:</p>
+<ul>
+<li>Jogar Futebol</li>
+<li>Jogar Videogame</li>
+<li>Estudar</li>
+<li>Treinar na academia</li>
+<li>Sair com a minha namorada</li>
+
+</ul>
+
+<p>Uma curiosidade sobre mim é que, em Brasilia eu jogava por um clube de la e ja disputei vários campeonatos, inclusive um fora do país, que foi a minha melhor experiência dentro do futebol</p>
+<p>Aqui esta uma foto minha jogando em Amsterdam,Holanda,a localização da onde era o campo,video de um dos jogos e um formulário de contato da empresa que proporcionou a viagem</p>
+<img src="WhatsApp Image 2025-02-27 at 18.32.06.jpeg" alt="Foto jogando bola" height="350" width="500">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4856.968837507928!2d4.676875798177529!3d52.50657188823019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5fa74d37aaaab%3A0x3d0772cf9409a277!2sHeemskerk%20Cup!5e0!3m2!1spt-BR!2sbr!4v1740692178943!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/WtB7B2Q26k0?si=w_4E4ZhV4bkFGXY5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdmzRy3pX0idpn2y2R-D-qYMbd3b96dn-HSfXo_MFzSqkyr2Q/viewform">Oficial sports XP</iframe>
+<h2>Estudei no colégio Leonardo Da Vinci, unidade Taguatinga, que é uma das melhores escolas de Brasília, aqui esta o link do site da instituição</h2>
+<a href="https://leonardoonline.com.br/">Site do leonardo Da Vinci</a>
+<br>
+<img src="ldv.jpg" height="300">
+<img src="WhatsApp Image 2025-02-27 at 20.03.27.jpeg" height="300" width="200">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3838.176663268699!2d-48.04400402481164!3d-15.847309584800424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a32886ffffff3%3A0x4aaea9826b4981b8!2sCentro%20Educacional%20Leonardo%20da%20Vinci%20-%20Taguatinga!5e0!3m2!1spt-BR!2sbr!4v1740698353548!5m2!1spt-BR!2sbr" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+<h2>Outra parte muito importante pra mim é a minha namorada que me ajuda em várias coisas na minha vida e sempre me apoia e aqui esta uma foto minha com ela:</h2>
+<img src="WhatsApp Image 2025-02-27 at 20.07.58.jpeg" height="500" width="400">
+    </body>
+    </html>
